# elmo

./: .gitignore  .gitinore  README.md  first.js
app/: app.py  main_window.ui  main_window_ui.py
catkin_elmo/src/elmo/: CMakeLists.txt  package.xml
catkin_elmo/src/elmo/cfg/: PanTilt.cfg
catkin_elmo/src/elmo/launch/: ai.launch  elmo.launch  elmo_nosudo.launch
catkin_elmo/src/elmo/msg/: PanTilt.msg  TouchEvent.msg
catkin_elmo/src/elmo/src/: blush.py  call_friend.py  config.py  config_pan_tilt.py  conversation.py  conversation_logger.py  conversation_manager.py  crop_video.py  fix_icon_resolution.py  gpio.py  herkulex.py  http_server.py  leds.py  logger.py  motor_animation.py  offline_tts.py  pan_tilt.py  pan_tilt_watchdog.py  play_akinator.py  robot.py  robot_server.py  speakers.py  start_demo.py  start_routine.py  startup.py  test_leds.py  test_motors.py  test_pan_tilt.py  touch_calibrator.py  touch_calibrator_complex.py  touch_sensors.py  utils.py  wifi.py
catkin_elmo/src/elmo/src/akinator.py/: play_akinator.py
catkin_elmo/src/elmo/src/akinator.py/akinator/: akinator.py
catkin_elmo/src/elmo/src/static/: index.html  main.js  style.css
catkin_elmo/src/elmo/src/static/video_clips/: eyes_green_all.json
catkin_elmo/src/idmind_edenai/: CMakeLists.txt  package.xml
catkin_elmo/src/idmind_edenai/launch/: main.launch  norway.launch
catkin_elmo/src/idmind_edenai/res/: hello.mpga  response.json
catkin_elmo/src/idmind_edenai/src/: conversation.py  conversation_en.py  conversation_manager.py  emotion_extraction.py  logger.py  microphone_recognition.py  offline_tts.py  robot.py  sentiment_analysis.py  speech_recognition_analysis.py  speech_to_text.py  speech_to_text_offline.py  text_to_speech.py  translate_node.py  vosk_test_microphone.py
(+39 files in other folders)
