<?xml version="1.0"?>
<package format="2">
  <name>elmo</name>
  <version>0.0.0</version>
  <description>The elmo package</description>

  <maintainer email="hpovoa@todo.todo">hpovoa</maintainer>


  
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>actionlib_msgs</depend>
  <depend>python3-scipy</depend>

  <export>

  </export>
</package>
