<?xml version="1.0"?>
<package format="2">
  <name>idmind_edenai</name>
  <version>0.0.0</version>
  <description>The idmind_edenai package</description>
  <maintainer email="hpovoa@todo.todo">hpovoa</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>python3-SpeechRecognition</depend>
  <depend>python3-pyaudio</depend>
  

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
